--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.1",
     "react-markdown": "latest",
     "react-resizable-panels": "^2.1.7",
