--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "react": "^18",
+    "react-contexify": "^6.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.3.8",
